--- a/helloboot/src/main/resources/application.properties
+++ b/helloboot/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=01;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.sql-script-encoding=utf-8
+spring.h2.console.enabled=true
+#spring.datasource.initialize=true
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:schema.sql
+spring.datasource.data=classpath:data.sql
